--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Delta27222.github.io/What_Does_The_Fox_Say_API",  
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
